create a popular game slider

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,13 @@
     <string name="play_game">Play Game</string>
     <string name="official_version">Official Version</string>
     <string name="masterpiece">MASTERPIECE</string>
+    <string name="apex_legends_is_a_free_to_play_n_hero_shooter_game_where_legendary">Apex Legends is a free-to-play \n hero shooter game where legendary.</string>
+    <string name="popular_games">Popular Games</string>
+    <string name="see_all">See All</string>
+    <string name="breathing_village_more_than_just_a_mysterious_backdrop_for_nthe_horrifying_events_that_unfold_in_the_game">Breathing Village – More than just a mysterious backdrop for\nthe horrifying events that unfold in the game</string>
+    <string name="action_adventure">Action Adventure</string>
+    <string name="gta_v">GTA-V</string>
+    <string name="free_to_play">Free To Play</string>
+    <string name="grand_theft_auto_v_and_gta_online_n_now_upgraded_for_playstation_5_and_xbox">Grand Theft Auto V and GTA Online \n now upgraded for PlayStation 5 and Xbox</string>
 
 </resources>
